# unbrowsed

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: api.rst  conf.py  contributing.rst  index.rst  installation.rst  requirements.txt  usage.rst
docs/source/: conf.py  contributing.rst
src/unbrowsed/: __init__.py  exceptions.py  matchers.py  parser.py  queries.py  resolvers.py  types.py  utils.py
tests/: test_exceptions.py  test_get_all_by_role.py  test_get_by_label_text.py  test_get_by_role.py  test_get_by_text.py  test_matchers.py  test_query_all_by_role.py  test_query_by_label_text.py  test_query_by_role.py  test_query_by_role_with_name_description.py  test_query_by_text.py  test_resolvers.py  test_to_have_attribute.py  test_to_have_text_content.py
