[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "unbrowsed"
version = "0.1.0a9"
description = "A browserless HTML testing library for Python"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Valentino Gagliardi", email ="valentino@valentinog.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "selectolax>=0.3.28",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "coverage[toml]"
]

[project.urls]
"Homepage" = "https://github.com/username/unbrowsed"
"Bug Tracker" = "https://github.com/username/unbrowsed/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.coverage.run]
branch = true
parallel = true
source = [
    "unbrowsed",
    "tests"
]

[tool.coverage.paths]
source = [
    "src",
]

[tool.coverage.report]
show_missing = true
fail_under = 99
