[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=61" ]

[project]
name = "unbrowsed"
version = "0.1.0a23"
description = "A browserless HTML testing library for Python"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Valentino Gagliardi", email = "valentino@valentinog.com" },
]
requires-python = ">=3.8"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "selectolax>=0.3.28",
]

optional-dependencies.docs = [
  "myst-parser>=2",
  "sphinx>=7.2",
  "sphinx-rtd-theme>=2",
]
optional-dependencies.test = [
  "coverage[toml]",
  "pytest>=7",
]

urls.Documentation = "https://unbrowsed.readthedocs.io"
urls.Repository = "https://github.com/valentinogagliardi/unbrowsed"

[tool.black]
line-length = 79

[tool.pytest.ini_options]
testpaths = [ "tests" ]
python_files = "test_*.py"

[tool.coverage.run]
branch = true
parallel = true
source = [
  "unbrowsed",
  "tests",
]

[tool.coverage.paths]
source = [
  "src",
]

[tool.coverage.report]
show_missing = true
fail_under = 99

[tool.rstcheck]
ignore_directives = [
  "autoclass",
  "automodule",
  "autofunction",
]
report_level = "ERROR"
